Completed implementation of printing through the use of SumatraPDF which will need to be installed once Nexus is deployed on all machines that require it.